# eda-service-aws

./: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
eda_service/: component.py  util.py
eda_service/database/: infrastructure.py
eda_service/eda_processor/: infrastructure.py
eda_service/eda_processor/runtime/: Dockerfile  perform_eda.py  requirements.txt
tests/unit/: test_stack.py
